# PixPhetamine

./: .gitignore  Pixphetamine.sln  README.md  SickBeamPhetamine.sln  index.html  params.json
Documentation/: Doxyfile
Documentation/html/: _c_camera_8cpp.html  _c_camera_8h.html  _c_camera_8h_source.html  _c_input_handler_8cpp.html  _c_input_handler_8h.html  _c_input_handler_8h_source.html  _c_shader_8cpp.html  _c_shader_8h.html  _c_shader_8h_source.html  _c_static_mesh_8cpp.html  _c_static_mesh_8h.html  _c_static_mesh_8h_source.html  _c_timer_8cpp.html  _c_timer_8h.html  _c_timer_8h_source.html  _low_level_rendering_wrapper_8cpp.html  _low_level_rendering_wrapper_8cpp.js  _low_level_rendering_wrapper_8h.html  _low_level_rendering_wrapper_8h.js  _low_level_rendering_wrapper_8h_source.html  _rendering_utilities_8cpp.html  _rendering_utilities_8cpp.js  _rendering_utilities_8h.html  _rendering_utilities_8h.js  _rendering_utilities_8h_source.html  _s_core_engine_8cpp.html  _s_core_engine_8h.html  _s_core_engine_8h.js  _s_core_engine_8h_source.html  annotated.html  annotated_dup.js  class_c_camera-members.html  class_c_camera.html  class_c_camera.js  class_c_input_handler-members.html  class_c_input_handler.html  class_c_input_handler.js  class_c_shader-members.html  class_c_shader.html  class_c_shader.js  (+91 more)
Documentation/latex/: _c_camera_8cpp.tex  _c_camera_8h.tex  _c_input_handler_8cpp.tex  _c_input_handler_8h.tex  _c_shader_8cpp.tex  _c_shader_8h.tex  _c_static_mesh_8cpp.tex  _c_static_mesh_8h.tex  _c_timer_8cpp.tex  _c_timer_8h.tex  _low_level_rendering_wrapper_8cpp.tex  _low_level_rendering_wrapper_8h.tex  _rendering_utilities_8cpp.tex  _rendering_utilities_8h.tex  _s_core_engine_8cpp.tex  _s_core_engine_8h.tex  annotated.tex  class_c_camera.tex  class_c_input_handler.tex  class_c_shader.tex  class_c_static_mesh.tex  class_c_timer.tex  class_s_core_engine.tex  dir_0054aaea6eb322ff16c6403a5a8dd5a4.tex  dir_0905c53652fc5c476289842add45dafd.tex  dir_1ffd45c5c0e77c357e0edf2ec517a40d.tex  dir_253f2e9e91168317622747549c76e8e0.tex  dir_2987b7aed12aa61f77aa3e8767c18e44.tex  dir_3144f7a0d136f5d4af7ba2991eb547fb.tex  dir_5c148da1a477c97edd41c886c9dcacdd.tex  dir_5c917968bdcf79c1a7158e8e2941c271.tex  files.tex  main_8cpp.tex  (+20 more)
Pixphetamine/: CMakeLists.txt  Pixphetamine.vcxproj  Pixphetamine.vcxproj.filters  error.txt  log.txt
Pixphetamine/code/: main.cpp
Pixphetamine/code/hdr/: CBasicMesh.h  CCamera.h  CFrameBuffer.h  CInputHandler.h  CPostProcessPass.h  CShader.h  CSkybox.h  CSkyboxTexture.h  CStaticMesh.h  CTexture.h  CTimer.h  Display.h  Exceptions.h  FBasicMeshes.h  HConstants.h  HExceptions.h  HInternalTypesAliases.h  LowLevelRenderingWrapper.h  SCoreEngine.h  SError.h  SErrorHandler.h  SMeshQuad.h  UCoreEngine.h  UErrorHandler.h  Utility.h  VSingleton.h
Pixphetamine/code/src/: CBasicMesh.cpp  CCamera.cpp  CFrameBuffer.cpp  CInputHandler.cpp  CPostProcessPass.cpp  CShader.cpp  CSkybox.cpp  CSkyboxTexture.cpp  CStaticMesh.cpp  CTexture.cpp  CTimer.cpp  Display.cpp  Exceptions.cpp  FBasicMeshes.cpp  LowLevelRenderingWrapper.cpp  SCoreEngine.cpp  SError.cpp  SErrorHandler.cpp  SMeshQuad.cpp  UCoreEngine.cpp  UErrorHandler.cpp  Utility.cpp
Pixphetamine/dlls/: README.txt
Pixphetamine/models/: cube.lowpoly
Pixphetamine/shaders/: basic.frag  basic.vert  blurH.frag  blurV.frag  downsampling.frag  downsampling.vert  postprocess.frag  rgbsplit.frag  ssao.frag
SickBeamPhetamine/: SickBeamPhetamine.vcxproj  SickBeamPhetamine.vcxproj.filters
(+69 files in other folders)
